# links

./: .clang-format  .gitignore  Bootstrap.vcxproj  CMakeLists.txt  ClassDiagram.cd  Legacy.vcxproj  README.md  bookmarks.bat  bookmarks.dsp  bookmarks.dsw  bookmarks.plg  bookmarks.sln  bookmarks.vcproj  bookmarks.vcxproj  bookmarks.vcxproj.filters  links.sln  links.vcxproj  main.c  main.cpp  main.h  makefile  mssccprj.scc  notes.txt  vssver.scc  Командная строка Home.lnk  Командная строка.lnk
Bootstrap/: Bootstrap.vcxproj  Bootstrap.vcxproj.filters
Bootstrap/Release/: links.cgi
Controllers/: Commands.cpp  Commands.h
Data/: Data.cpp  Data.h  FileListReader.h  FileListReaderDir.cpp  FileListReaderDir.h  FileListReaderTest.cpp  FileListReaderTest.h
Docker/: README.md
Docker/Apache/: .env  .env.example  .env.linux  .env.mac  .env.windows  .env.windows.debug  Dockerfile  README.md  apache2.conf  build-and-deploy.bat  build-and-deploy.sh  build-image.sh  docker-compose.debug.windows.yml  docker-compose.debug.yml  docker-compose.release.yml  docker-compose.yml  init.sh  start-apache.bat  start-apache.sh
Docker/Apache/logs/: log-analysis.md
Docker/Apache/scripts/: README.md
Docker/Apache/sites-available/: default-ssl.conf
Docker/IIS/: Dockerfile  build_iis_image.bat
Docker/LegacyBuilder/: Dockerfile  docker-compose.yml
Legacy/: Legacy.opt  Legacy.vcxproj  Legacy.vcxproj.filters
Legacy/Release/: links-legacy.cgi
Models/: Config.cpp  Config.h  ConfigFactory.cpp  ConfigFactory.h  ConfigTest.cpp  ConfigTest.h  Data.cpp  Data.h  FileConfig.cpp  FileConfig.h  FileList.cpp  FileList.h  FileListReader.h  FileListReaderDir.cpp  FileListReaderDir.h  FileListReaderTest.cpp  FileListReaderTest.h  FileReader.cpp  FileReader.h  LinkFileReader.cpp  LinkFileReader.h  RegConfig.cpp  RegConfig.h  TextFileReader.cpp  TextFileReader.h
Models/TestSpecific/: ConfigTest.cpp  ConfigTest.h  FileListReaderTest.cpp  FileListReaderTest.h  TextFileReaderTest.cpp  TextFileReaderTest.h
Models/WindowsSpecific/: ConfigFactory.h  RegConfig.cpp  RegConfig.h
NativeTest/: NativeTest.vcxproj  NativeTest.vcxproj.filters  UnitTest.cpp  stdafx.cpp  stdafx.h  unittest1.cpp
Projects/Bookmarks/: Bookmarks.vcxproj  Bookmarks.vcxproj.filters
Projects/Bookmarks/Sources/: main.cpp
Projects/Bootstrap/: Bootstrap.vcxproj  Bootstrap.vcxproj.filters
Projects/LegacyCGICMake/: CMakeLists.txt  deploy_debug_vscode.sh  deploy_release.sh  rebuild.sh
Projects/LegacyCGILinux/: LegacyCGILinux.vcxproj  LegacyCGILinux.vcxproj.filters  deploy_debug.sh  deploy_release.sh
Projects/LegacyCGIWindows/: LegacyCGIWindows.vcxproj  LegacyCGIWindows.vcxproj.filters  deploy_debug.bat  deploy_release.bat
Projects/TestConsoleOutput/: TestConsoleOutput.vcxproj  main.cpp
Projects/TestData/TestFileList/: README.txt
Projects/UnitTestsCatch2/: UnitTestsCatch2.filters  UnitTestsCatch2.vcxproj  UnitTestsCatch2.vcxproj.filters  main.cpp
Projects/UnitTestsWindows/: NativeTest.vcxproj  NativeTest.vcxproj.filters  UnitTest.cpp
Release/: links-legacy.cgi  links.cgi
Release/tmp/links/: 1471160335
Sources/App/: Globals.cpp  Globals.h  main.cpp  stdafx.h
Sources/Content/: Common.js  Styles.css
Sources/Controllers/: Commands.cpp  Commands.h
Sources/Models/: BookmarkReorganizer.cpp  BookmarkReorganizer.h  Config.cpp  Config.h  ConfigFactory.cpp  Data.cpp  FileList.cpp  FileList.h  FileListReaderDir.cpp  FileListReaderDir.h  LinkFileReader.h  OllamaService.cpp  OllamaService.h  TextFileReader.cpp  TextFileReader.h
Sources/Models/TestSpecific/: TextFileReaderTest.cpp  TextFileReaderTest.h
Sources/Models/WindowsSpecific/: ConfigFactory.cpp  ConfigFactory.h  README.txt  RegConfig.cpp  RegConfig.h
Sources/Shared/Controllers/: Commands.cpp  Commands.h
Sources/Shared/Models/: ConfigFactory.h  FileConfig.cpp  FileConfig.h  FileListReaderDir.cpp
Sources/Shared/Repositories/: FilesystemBookmarkRepository.cpp  FilesystemBookmarkRepository.h  IBookmarkRepository.h  (+5 more)
Sources/Utils/: DebugLog.h  Errors.cpp  Errors.h  Miscellaneous.cpp  Miscellaneous.h
Sources/Views/: AddDirectory.cpp  AddDirectory.h  AddLink.cpp  AddLink.h  AutoFolderStatus.cpp  AutoFolderStatus.h  DeleteDirectory.cpp  DeleteDirectory.h  DeleteLink.cpp  DeleteLink.h  EditDirectory.cpp  EditDirectory.h  EditLink.cpp  EditLink.h  ErrorBox.cpp  ErrorBox.h  FileListBootstrap.cpp  FileListBootstrap.h  FileListLegacy.cpp  FileListLegacy.h  Login.cpp  Login.h  Page.cpp  Page.h  View.h
Sources/dialogs/: DeleteFolder.htm
TestFolder/: 57564efb.url  dir_linux.txt
TestFolder/14732139/: 57584dec.url  test.txt
TestFolder/14817423/: 5a13437c.utf8
TestFolder/Тест/: 57564efb.url  57584dec.url  readme.txt  test.txt
Tests/: AssemblyInfo.cpp  Tests.vcxproj  Tests.vcxproj.filters  UnitTest.cpp  bookmarks_test.vcxproj  stdafx.cpp  stdafx.h
Utils/: entities.cpp  entities.h
Views/: AddLink.cpp  AddLink.h  ErrorBox.cpp  ErrorBox.h  FileListBootstrap.cpp  FileListBootstrap.h  FileListLegacy.cpp  FileListLegacy.h  Page.cpp  Page.h  PageBootstrap.cpp  PageBootstrap.h  View.h
dialogs/: DeleteFolder.htm
linux/: bookmarks  main.c
tests/: UnitTest.cpp  app.rc  bookmarks_test.vcxproj.filters  test.txt
(+43 files in other folders)
